신규기능: 디지털 임플란트 페이지 작성
슬라이드 부분은 추후 상담 후에 진행 예정

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -54,6 +54,10 @@ section {
     color: #212121;
 }
 
+.section-title strong {
+    font-weight: bold;
+}
+
 .section-title-color {
     color: #9b8b7e;
 }
@@ -64,6 +68,9 @@ section {
     line-height: 27px;
 }
 
+.section-text strong {
+    font-weight: bold;
+}
 
 .max-layout-width {
     width: 100%;
