기능개선: 네비게이션 임플란트 페이지 표 색상 변경

--- a/src/main/webapp/css/implant/navigationImplants.css
+++ b/src/main/webapp/css/implant/navigationImplants.css
@@ -436,6 +436,10 @@
     line-height: 1;
 }
 
+.con01.cont li.table-right {
+    background: #9b8b7e;
+}
+
 .con01.cont li.table-middle {
     background: #222;
     color: #fff;
