기능개선: 3개 카테고리 전체적으로 퍼블리싱 교정
1. 공통 클래스 추가(추후 공통적으로 한번에 처리 하기 위함)
2. CSS 틀어져 있는 부분 수정

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -202,3 +202,8 @@ a {
 strong {
     font-weight: bold;
 }
+
+.section-top-title-left .max-layout-width {
+    max-width: 100%;
+    box-sizing: border-box;
+}
