--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -105,6 +105,7 @@
 
 .section03 .move-title {
     top: 0;
+    padding-left: 50%;
 }
 
 .section03 .section-text {
@@ -141,12 +142,12 @@
 }
 
 .section04 .section-title {
-    padding-top: 100px;
+    padding-top: 70px;
     position: relative;
     line-height: 1.3;
     margin-bottom: 174px;
-    padding-left: 164px;
     letter-spacing: -1px;
+    padding-left: 80px;
 }
 
 .section04 .max-layout-width .text > div:before {
@@ -155,7 +156,6 @@
     width: 156px;
     height: 134px;
     position: absolute;
-    left: 70px;
     top: 0;
 }
 
@@ -252,6 +252,17 @@
 
 .section05 .img04 {
     background: url(../../images/sub/implant/oneday/oneday_icon08.png) no-repeat top center;
+}
+
+.section05 .border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 300px solid #fff;
+    transition: .7s ease-out;
+    box-sizing: border-box;
 }
 
 .section06 {
@@ -469,10 +480,26 @@
 .section07 li h2 ~ p {
     margin-bottom: 17px;
     font-size: 16px;
+    position: relative;
+    padding-left: 10px;
+}
+
+.section07 li h2 ~ p:before {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background: #222;
+    content: '';
+    top: 5px;
+    left: 0;
 }
 
 .section07 li h2 ~ p strong {
     font-size: 16px
+}
+
+.section07 .img01 h2 ~ p:before {
+    background: #fff;
 }
 
 .section07 .img01 {
@@ -484,6 +511,7 @@
     content: '';
     position: absolute;
     right: 0;
+    top: -170px;
 }
 
 .section07 .img01:before {
@@ -496,6 +524,7 @@
     width: 407px;
     height: 261px;
     background: url(../../images/sub/implant/full/total06.png) no-repeat top center;
+    top: -211px;
 }
 
 .section07 li.img02 {
@@ -507,3 +536,6 @@
     color: #222;
 }
 
+.section03 .section-title {
+    line-height: 1.3
+}
