--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -256,16 +256,17 @@
 .section06 .section-title {
     line-height: 1.3;
     margin-bottom: 29px;
+    padding-top: 30px;
 }
 
 .section06 .section-text {
     line-height: 1.7;
-    margin-bottom: 151px;
+    margin-bottom: 121px;
 }
 
 .section06 .image_box_left {
     max-width: 1315px;
-    height: 581px;
+    height: 541px;
     width: 51.52%;
     z-index: 1;
 }
@@ -278,9 +279,9 @@
     background: #f5f5f5;
     width: 53.29%;
     position: absolute;
-    height: 393px;
+    height: 333px;
     right: 0px;
-    bottom: -60px;
+    bottom: -47px;
 }
 
 .section06 .max-layout-width {
@@ -474,7 +475,7 @@ body .section02 li:first-child {
 }
 
 .section06 .text > div {
-    padding-left: 58px;
+    padding-left: 78px;
 }
 
 .section07 {
@@ -542,7 +543,7 @@ body .section02 li:first-child {
 }
 
 .section08 {
-    margin-top: 180px;
+    margin-top: 120px;
     text-align: center;
 }
 
