--- a/src/main/webapp/css/info/medical.css
+++ b/src/main/webapp/css/info/medical.css
@@ -70,6 +70,17 @@
     font-size: 14px;
     padding-left: 13px;
     margin-bottom: 14px;
+    position: relative;
+}
+
+.section02 ul li p:before {
+    content: '';
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    background: #212121;
+    left: 0;
+    top: 5px;
 }
 
 .section02 .text-color {
@@ -93,12 +104,12 @@
 }
 
 .section03 .section-title {
-    padding-left: 103px;
+    padding-left: 79px;
     line-height: 1.4;
 }
 
 .section03 .section-text {
-    padding-left: 103px;
+    padding-left: 83px;
     line-height: 1.8;
     width: 552px;
     word-break: keep-all;
