신규기능: 충치 페이지의 탭 컨테츠 영역 추가 작업

--- a/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
@@ -190,7 +190,7 @@
     position: relative;
 }
 
-.section04 .pager:before {
+.tab-contents5 .section04 .pager:before {
     position: absolute;
     left: 0;
     content: '';
