--- a/src/main/webapp/css/etc/etc.css
+++ b/src/main/webapp/css/etc/etc.css
@@ -1,3 +1,17 @@
+.section-title {
+    text-align: center;
+    line-height: 1.4;
+    border-top: 2px solid #838383;
+    margin-top: 50px;
+    padding-top: 70px;
+}
+
+.section-text {
+    margin-top: 50px;
+    margin-bottom: 60px;
+}
+
+
 .privacy-title {
     font-size: 22px;
     font-weight: bold;
