--- a/src/main/webapp/css/mypage/mypage.css
+++ b/src/main/webapp/css/mypage/mypage.css
@@ -12,6 +12,10 @@
     color: #fff;
 }
 
+.tab li.active a {
+    color: #fff;
+}
+
 .tab li:first-child {
     border-left: none;
 }
@@ -23,9 +27,12 @@
     box-sizing: border-box;
     text-align: center;
     font-size: 16px;
-    color: #222;
     font-weight: bold;
     padding: 17px 0;
     border-left: 1px solid #e2e2e2;
     cursor: pointer;
+}
+
+.tab li a {
+    color: #222;
 }
