--- a/src/main/webapp/css/mypage/mypage.css
+++ b/src/main/webapp/css/mypage/mypage.css
@@ -23,16 +23,19 @@
 .tab li {
     width: 33.33333333%;
     float: left;
-    height: 50px;
     box-sizing: border-box;
     text-align: center;
     font-size: 16px;
     font-weight: bold;
-    padding: 17px 0;
     border-left: 1px solid #e2e2e2;
     cursor: pointer;
 }
 
 .tab li a {
     color: #222;
+    height: 50px;
+    padding: 17px 0;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
 }
