기능개선: 타이틀 텍스타의 line 간격 조정

--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -269,3 +269,7 @@ p + .dec-title {
 .staff-info-box {
     padding-bottom: 145px;
 }
+
+.doctor-contents .section-title {
+    line-height: 1.3;
+}
