--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -2,6 +2,8 @@
     display: inline-block;
     width: 100%;
     overflow: hidden;
+    margin-top: 96px;
+    margin-bottom: 100px;
 }
 
 .section01 .bx-wrapper .bx-viewport {
@@ -9,66 +11,335 @@
     /*padding-bottom: 64px;*/
 }
 
-.slider {
+.section01 .slider {
+    height: auto;
 }
 
-.slider .text {
-    /*width: 426px;*/
-    /*height: 225px;*/
-    /*padding-top: 60px;*/
-    /*padding-left: 35px;*/
-    /*box-sizing: border-box;*/
-    /*background: #9b8b7e;*/
-    /*position: absolute;*/
-    /*left: -75px;*/
-    /*bottom: -64px;*/
-    /*display: none;*/
+.section01 .swiper-slide {
+    width: 57%;
+    display: inline-block;
+    height: 503px;
 }
 
-.slider .text h5 {
+.section01 .slider .text h5 {
     font-size: 30px;
     color: #fff;
     margin-bottom: 28px;
 }
 
-.slider .text p {
+.section01 .slider .text p {
     font-size: 21px;
     line-height: 1.4;
     color: #fff;
 }
 
-.section01 .display-inline-block {
+.section01 .slider-container > div{
+    float: right;
 }
 
 .section01 .bx-pager-item {
     display: block;
     overflow: hidden;
+    margin-bottom: 14px;
+    outline: none;
 }
 
-.section01 .slider-pagenation span:first-child {
+.section01 .slider-pagenation .bx-pager-item span:first-child {
     width: 47px;
     height: 47px;
     margin-right: 16px;
     padding: 13px;
     box-sizing: border-box;
     border: 1px solid #ddd;
+    border-radius: unset;
+    font-size: 19px;
+    font-weight: 400;
 }
 
-.section01 .slider-pagenation span {
+.section01 .slider-pagenation .bx-pager-item span {
     color: #222;
     float: left;
-    font-width: bold;
+    font-weight: bold;
 }
 
-.section01 .slider-pagenation span + span {
+.section01 .slider-pagenation .bx-pager-item .label {
     font-size: 20px;
-    height: 47px;
-    padding: 13px 0;
+    padding: 13px 50px 13px 0;
+    position: relative;
 }
 
-.bx-pager-item .active {
-
+.section01 .slider-pagenation .swiper-pagination-bullet-active .bx-pager-item .label:before {
+    position: absolute;
+    bottom: 0;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #000;
+    left: 0;
 }
 
-.slider-box {
+.section01 .slider-container > div.slider-box {
+    width: 57%;
+    float: right;
+    padding-left: 73px;
+    padding-bottom: 63px;
+    position: relative;
 }
+
+.section01 .swiper-slide {
+    opacity: 0.5;
+}
+
+.section01 .swiper-slide.swiper-slide-active {
+    opacity: 1;
+}
+
+.section01 .text-box {
+    width: 427px;
+    height: 225px;
+    background: #9b8b7e;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    left: 0;
+    padding: 64px 0 0 36px;
+    box-sizing: border-box;
+    color: #fff;
+}
+
+.section01 .text-box h2 {
+    font-size: 29px;
+    margin-bottom: 25px;
+}
+
+.section01 .text-box p {
+    line-height: 1.5;
+    font-size: 23px;
+}
+
+.section01 .slider-container {
+    overflow: hidden;
+}
+
+.section01 .swiper-pagination-bullet-active {
+    background: none;
+}
+
+.section01 .swiper-pagination-bullet {
+    width: auto;
+    height: auto;
+    display: block;
+    border-radius: unset;
+    background: none;
+    opacity: 1;
+    outline: none;
+}
+
+.section01 .slider-pagenation .swiper-pagination-bullet-active .bx-pager-item span:first-child{
+    background: #000;
+    color: #fff;
+}
+
+.section01 .slider-pagenation {
+    margin-right: 45px;
+}
+
+.section01 .max-layout-width {
+    position: relative;
+}
+
+.section01 .pager {
+    position: absolute;
+    right: 0;
+    bottom: 30px;
+}
+
+.section01 .pager span {
+    float: left;
+}
+
+.section01 .pager span.current {
+    margin-top: -10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.section01 .pager span.max {
+    font-size: 13px;
+}
+
+.section02 {
+    padding: 32px 0;
+    background: #f1f1f1;
+}
+
+.section02 .cont1 .big-img {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device01_img02.png);
+}
+
+.section02 .cont3 .big-img {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device02_img02.png);
+}
+
+.section02 .cont1 .small-img1 {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device01_img03.jpg);
+}
+
+.section02 .cont1 .small-img2 {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device01_img04.jpg);
+}
+
+.section02 .cont3 .small-img1 {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device02_img03.jpg);
+}
+
+.section02 .cont3 .small-img2 {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device02_img04.jpg);
+}
+
+.section02 .text {
+    padding-left: 860px;
+    padding-top: 50px;
+}
+
+.section02 .text p {
+    line-height: 1.6;
+    margin-bottom: 25px;
+    word-break: keep-all;
+}
+
+.section02 .img {
+    position: absolute;
+    height: 461px;
+}
+
+.section02 .img > div {
+    float: left;
+}
+
+.section02 .big-img {
+    width: 354px;
+    height: 461px;
+    margin-right: 33px;
+    margin-top: 51px;
+    margin-left: 63px;
+}
+
+.section02 .small-img div {
+    width: 354px;
+    height: 278px;
+}
+
+.section02 .small-img1 {
+    margin-bottom: 20px;
+}
+
+.section02 .max-layout-width > div {
+    position: relative;
+    height: 576px;
+    display: none;
+    opacity: 0;
+    transition: opacity 200ms linear 100ms;
+}
+
+.section02 .max-layout-width > div.active {
+    display: block;
+    animation: fade-in 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+
+.section03 {
+    margin-top: 171px;
+    padding-bottom: 244px;
+    overflow: hidden;
+}
+
+.section03 .title {
+    padding-left: 72px;
+    position: relative;
+    font-size: 13px;
+    color: #222;
+    margin-bottom: 75px;
+    display: inline-block;
+    letter-spacing: 1.4px;
+}
+
+.section03 .title:before {
+    position: absolute;
+    content: '';
+    width: 50px;
+    height: 1px;
+    background: #7e6956;
+    left: 0;
+    top: 7px;
+}
+
+.section03 .section-title {
+    line-height: 1.3;
+}
+
+.section03 .section-text {
+    line-height: 1.9;
+    margin-top: 20px;
+    position: relative;
+    width: 340px;
+    word-break: keep-all;
+}
+
+.section03 .section-text:after {
+    position: absolute;
+    content: '';
+    width: 211px;
+    height: 3px;
+    background: #7e6956;
+    left: 0;
+    bottom: -135px;
+}
+
+.section03 .image_box_right {
+    /* max-width: 1048px; */
+    width: 100%;
+    height: 449px;
+    top: 0;
+    left: 50%;
+    margin-left: -210px;
+}
+
+.section03 .img {
+    background: url(../../images/sub/info/diagnosticEquipmentSystem/device_bottom.jpg) no-repeat center;
+    background-size: cover;
+    position: absolute;
+    z-index: 2;
+    top: 42px;
+    width: 41%;
+}
+
+.section03 .bg {
+    background: #7e6956;
+    position: absolute;
+    left: -32px;
+    top: 0;
+    width: 50%;
+    height: 449px;
+}
+
