--- a/src/main/webapp/css/implant/navigationImplants.css
+++ b/src/main/webapp/css/implant/navigationImplants.css
@@ -119,7 +119,6 @@
 }
 
 .section05 .bg {
-    background: #f5f5f5;
     width: 64.65%;
     position: absolute;
     height: 305px;
@@ -472,4 +471,25 @@
     border-left: 1px solid #8f8f8f;
     border-right: 1px solid #8f8f8f;
     box-sizing: border-box;
+}
+
+
+.left-fade-slider-container .img01 {
+    background: url(../../images/sub/implant/navigation/navi07.jpg) no-repeat center;
+}
+
+.left-fade-slider-container .img02 {
+    background: url(../../images/sub/implant/navigation/navi08.jpg) no-repeat center;
+}
+
+.left-fade-slider-container .img03 {
+    background: url(../../images/sub/implant/navigation/navi09.jpg) no-repeat center;
+}
+
+.left-fade-slider-container .img04 {
+    background: url(../../images/sub/implant/navigation/navi10.jpg) no-repeat center;
+}
+
+.section09 {
+    margin-top: 150px;
 }
